@@ -18,11 +18,13 @@ import edu.umd.cs.piccolo.nodes.PImage;
 
 /**
  * A momentary button is "on" while pressed.
+ * Origin is at the center of the button.
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
 public class MomentaryButtonNode extends PNode {
 
+    private final PImage imageNode;
     private final DynamicCursorHandler cursorHandler;
 
     // Constructor that uses default images (round red buttons with 3D look)
@@ -36,9 +38,9 @@ public class MomentaryButtonNode extends PNode {
     public MomentaryButtonNode( final UserComponent userComponent, final Property<Boolean> onProperty, final Property<Boolean> enabledProperty, final Image onImage, final Image offImage, final Image disabledImage ) {
         assert ( onImage != offImage ); // different images are required
 
-        this.cursorHandler = new DynamicCursorHandler();
+        cursorHandler = new DynamicCursorHandler();
 
-        final PImage imageNode = new PImage();
+        imageNode = new PImage();
         addChild( imageNode );
 
         addInputEventListener( new PBasicInputEventHandler() {
@@ -60,10 +62,10 @@ public class MomentaryButtonNode extends PNode {
         onProperty.addObserver( new SimpleObserver() {
             public void update() {
                 if ( enabledProperty.get() ) {
-                    imageNode.setImage( onProperty.get() ? onImage : offImage );
+                    setImage( onProperty.get() ? onImage : offImage );
                 }
                 else {
-                    imageNode.setImage( disabledImage );
+                    setImage( disabledImage );
                 }
             }
         } );
@@ -71,17 +73,22 @@ public class MomentaryButtonNode extends PNode {
         enabledProperty.addObserver( new SimpleObserver() {
             public void update() {
                 if ( enabledProperty.get() ) {
-                    imageNode.setImage( offImage );
+                    setImage( offImage );
                     cursorHandler.setCursor( Cursor.HAND_CURSOR );
                 }
                 else {
                     onProperty.set( false );
-                    imageNode.setImage( disabledImage );
+                    setImage( disabledImage );
                     cursorHandler.setCursor( Cursor.DEFAULT_CURSOR );
                 }
             }
         } );
 
         addInputEventListener( cursorHandler );
+    }
+
+    private void setImage( Image image ) {
+        imageNode.setImage( image );
+        imageNode.setOffset( -imageNode.getFullBoundsReference().getWidth() / 2, -imageNode.getFullBoundsReference().getHeight() / 2 );
     }
 }
